--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFavoriteCats">
-
-        <activity android:name=".MyImagesActivity"
+        <activity
+            android:name=".PreviewActivity"
+            android:label="Preview Activity"
+            android:parentActivityName=".MyImagesActivity">
+        </activity>
+        <activity
+            android:name=".MyImagesActivity"
             android:label="My Images Activity"
-            android:parentActivityName=".MainActivity"/>
-
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
